- Implemented a usable (but still POC) NgrokClient to begin testing out API interactions - Renamed ngrok.http package to ngrok.protocol - Refactored TunnelRequest to CreateTunnel, other Request/Response objects renamed as well - Prep code for building out managed implementation of NgrokProcess - Removed Java 8 build/compatibility (for now)